--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,40 +1,19 @@
 version: 0.2
 
-env:
-  variables:
-    NODE_ENV: production
-  secrets-manager:
-    DB_PASSWORD: "my-app/db-password:password"
-
 phases:
   install:
     runtime-versions:
       nodejs: 18
     commands:
-      - echo "Installing dependencies..."
       - npm install
-
-  pre_build:
-    commands:
-      - echo "Running tests..."
-      - npm test
 
   build:
     commands:
-      - echo "Building application..."
       - npm run build
-
-  post_build:
-    commands:
-      - echo "Packaging build artifacts..."
       - zip -r app.zip dist/
 
 artifacts:
   files:
     - app.zip
-    - build/**/*
+  name: app-artifact
   discard-paths: yes
-
-cache:
-  paths:
-    - node_modules/**/* 
